--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>My First Bitstarter (Lecture7)</title>
     
     <!-- Enable "responsive" Bootstrap features -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
