--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ var addthis_config = {"data_track_addressbar":true};
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42991172-1', 'amazonaws.com');
+  ga('create', 'UA-42991172-1', 'herokuapp.com');
   ga('send', 'pageview');
 
 </script>
