--- a/index.html
+++ b/index.html
@@ -212,7 +212,14 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+<a class="coinbase-button" 
+   data-button-style="custom_large"
+   data-button-text="Pay with Bitcoin"
+   data-code="eb37d9392941576358c09f233b988b1c" 
+   href="https://coinbase.com/checkouts/eb37d9392941576358c09f233b988b1c">
+   Pay With Bitcoin</a>
+<script src="https://coinbase.com/assets/button.js" type="text/javascript">
+</script>
           </div>
           </div>
 
